# LM2M

./: CMakeLists.txt  README.MD
app/: app.c  device.c
config/: config.h
include/: lm2m.h  lm2m_api.h  lm2m_log.h  lm2m_port.h  util.h
platform/linux/: port_posix.c
src/: lm2m.c  m2m_log.c  util.c
